[gd_scene load_steps=7 format=3 uid="uid://onto76ada87d"]

[ext_resource type="PackedScene" uid="uid://un86ip0c1s75" path="res://scenes/player_info_element.tscn" id="1_62fm1"]
[ext_resource type="Script" path="res://scenes/encounter.gd" id="1_ntlaj"]
[ext_resource type="Script" path="res://scenes/ui.gd" id="2_dtx1n"]
[ext_resource type="PackedScene" uid="uid://c32sargkrku8f" path="res://scenes/jumpet.tscn" id="2_pm20s"]
[ext_resource type="PackedScene" uid="uid://dka5ft4cxosrs" path="res://scenes/right_panel.tscn" id="2_yr2bm"]
[ext_resource type="PackedScene" uid="uid://h587v4triyb6" path="res://scenes/active_panel.tscn" id="3_5nnk0"]

[node name="encounter" type="Node2D"]
script = ExtResource("1_ntlaj")

[node name="monster_manager" type="Node2D" parent="."]
position = Vector2(265, 34)

[node name="Jumpet" parent="monster_manager" instance=ExtResource("2_pm20s")]
animation = &"idle"
frame_progress = 0.286582

[node name="monster_position" type="Node2D" parent="."]
position = Vector2(266, 37)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_dtx1n")

[node name="player_info_element" parent="UI" instance=ExtResource("1_62fm1")]

[node name="right_panel" parent="UI" instance=ExtResource("2_yr2bm")]

[node name="active_panel" parent="UI" instance=ExtResource("3_5nnk0")]
offset_top = 139.0
offset_bottom = 287.0
